--- a/templates/app.html
+++ b/templates/app.html
@@ -3,30 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
     <script src="https://js.pusher.com/8.2.0/pusher.min.js"></script>
     <title>App Usuarios</title>
 </head>
 <body>
     <div class="container">
         <form id="frmUsuarios" method="post">
-            <input type="hidden" id="id_usuario" name="id_usuario"> <!-- Para editar -->
+            <input type="hidden" id="id_usuario" name="id_usuario">
 
             <div class="mb-1">
                 <label for="nombre_usuario">Nombre de Usuario</label>
-                <input type="text" id="nombre_usuario" name="nombre_usuario" class="form-control" required minlength="5" maxlength="15">
+                <input type="text" id="nombre_usuario" name="nombre_usuario" class="form-control" required>
             </div>
             <div class="mb-1">
                 <label for="contrasena">Contraseña</label>
-                <input type="password" id="contrasena" name="contrasena" class="form-control" required minlength="6" maxlength="15">
+                <input type="password" id="contrasena" name="contrasena" class="form-control" required>
             </div>
             <div class="mb-1">
                 <button id="guardar" name="guardar" class="btn btn-dark">Guardar</button>
                 <button type="reset" id="cancelar" name="cancelar" class="btn btn-link">Cancelar</button>
             </div>
         </form>
-
         <table class="table table-sm">
             <thead>
                 <tr>
@@ -39,6 +38,7 @@
         </table>
     </div>
 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script>
         window.addEventListener("load", function () {
             function buscar() {
@@ -64,7 +64,7 @@
             $(document).on("click", ".btn-editar", function () {
                 var id = $(this).data("id");
 
-                $.get("/usuarios/editar", {id_usuario: id}, function (respuesta) {
+                $.get("/usuarios/editar", { id_usuario: id }, function (respuesta) {
                     var usuario = respuesta[0];
 
                     $("#id_usuario").val(usuario.Id_Usuario);
@@ -80,7 +80,7 @@
 
                 var id = $(this).data("id");
 
-                $.post("/usuarios/eliminar", {id_usuario: id}, function () {
+                $.post("/usuarios/eliminar", { id_usuario: id }, function () {
                     buscar(); // Refresca la lista después de eliminar
                 });
             });
@@ -96,7 +96,6 @@
                 $("#id_usuario").val("");
             });
 
-            // Pusher para recibir actualizaciones
             Pusher.logToConsole = true;
             var pusher = new Pusher("2df86616075904231311", { cluster: "us2" });
             var channel = pusher.subscribe("canalUsuarios");
