--- a/templates/app.html
+++ b/templates/app.html
@@ -44,6 +44,7 @@
             function buscar() {
                 $.get("/usuarios/buscar", function (respuesta) {
                     $("#tbodyUsuarios").html("");
+                    console.log(respuesta); // Depuración
 
                     respuesta.forEach(usuario => {
                         $("#tbodyUsuarios").append(`
@@ -88,10 +89,14 @@
             $("#frmUsuarios").submit(function (event) {
                 event.preventDefault();
 
-                $.post("/usuarios/guardar", $(this).serialize(), function () {
-                    $("#frmUsuarios").get(0).reset();
-                    buscar(); // Refresca la lista después de guardar
-                });
+                $.post("/usuarios/guardar", $(this).serialize())
+                    .done(function () {
+                        $("#frmUsuarios").get(0).reset();
+                        buscar(); // Refresca la lista después de guardar
+                    })
+                    .fail(function () {
+                        alert("Error al guardar los datos");
+                    });
             }).on("reset", function () {
                 $("#id_usuario").val("");
             });
